# cpp_2018

./: README.md
lab1/: input.txt  main.cpp  output.txt
lab2/: CMakeLists.txt  main.cpp
lab3/: main.cpp
